syntax = "proto3";
import "account.proto";
package proto;
option go_package = "github.com/eduardonunesp/bls-server/commons/proto";

message Policy {
    int32 minAccounts = 1;
    repeated Account requiredAccounts = 2;
}
